# yt-growth

./: .css-modules-unused.json  .gitignore  .jscpd.json  CLAUDE.md  DESIGN_SYSTEM.md  DUPLICATE_LOGIC_REPORT.md  FRONTEND_AUDIT.md  GO_LIVE_CHECKLIST.md  Makefile  OBSERVABILITY.md  PERF_NOTES_LANDING.md  README.md  REFACTOR_LOG.md  REFACTOR_PLAN.md  REFACTOR_PROMPTS.md  SECURITY.md  SEO_AUDIT.md  TODOS.md  UPGRADE_NOTES.md  chats_features.md  depcruise-errors.txt  dependency-cruiser.js  docker-compose.yml  env.example  final.md  geminis_features.md  middleware.ts  next.config.js  outline.md  package.json  playwright.config.ts  proxy.ts  styles.md  tsconfig.json  z.txt
.claude/: mcp.json  settings.json
apps/worker/: MIGRATION.md  pyproject.toml  requirements.txt
apps/worker/scripts/: seed_test_data.py
apps/worker/src/worker/: __init__.py  __main__.py
apps/worker/src/worker/app/: __init__.py
apps/worker/src/worker/app/feeders/: __init__.py  expansion.py  intent_seed.py  longtail.py  rss_expansion.py  runner.py
apps/worker/src/worker/common/: __init__.py  errors.py  time.py
apps/worker/src/worker/config/: __init__.py  settings.py
apps/worker/src/worker/domain/: __init__.py
apps/worker/src/worker/entrypoints/: __init__.py  main.py
apps/worker/src/worker/infra/: __init__.py
apps/worker/src/worker/ports/: __init__.py  clock.py  embeddings.py  metrics.py  repositories.py  youtube.py
apps/worker/tests/: conftest.py
apps/worker/tests/app/: __init__.py
apps/worker/tests/domain/: test_clustering.py  test_gating.py  test_labeling.py  test_scoring.py
(+2243 files in other folders)
